AC_INIT(README)
# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}

AM_INIT_AUTOMAKE(gtk-engines, 0.1)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

dnl proper defaults for gmodule based stuff
if test "x$enable_static" != "xyes"; then
  enable_static=no
fi

if test "x$enable_shared" != "xno"; then
  enable_shared=yes
fi

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Initialize libtool
AM_PROG_LIBTOOL

AM_PATH_GTK(1.1.5, , 
	AC_MSG_ERROR([*** GTK 1.1 not installed - please install first ***]))
AM_PATH_GDK_IMLIB(1.8, ,
        AC_MSG_ERROR([*** IMLIB 1.8 not installed - please install first ***]))

# We don't want to put GTK+ back into the shlibdeps, because that
# could cause the _wrong_ version of GTK+ to be pulled in.
GDK_IMLIB_LIBS=`echo $GDK_IMLIB_LIBS | sed -e 's/-lgdk / /' -e 's/-lgtk//' -e 's/-lglib//'`

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for endianness (needed by GdkRgb).
AC_C_BIGENDIAN

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_MMAP

AC_OUTPUT([
Makefile
pixmap/Makefile
pixmap/Theme/Makefile
pixmap/Theme/gtk/Makefile
metal/Makefile
metal/Theme/Makefile
metal/Theme/gtk/Makefile
notif/Makefile
notif/Theme/Makefile
notif/Theme/gtk/Makefile
redmond95/Makefile
redmond95/Theme/Makefile
redmond95/Theme/gtk/Makefile
])
