AC_INIT(README)
# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}

AM_INIT_AUTOMAKE(gtk-engines, 0.7)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Initialize libtool
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

# Checks for programs.
AM_PATH_GTK(1.1.13, , 
	AC_MSG_ERROR([*** GTK 1.1 not installed - please install first ***]))
AM_PATH_GDK_IMLIB(1.8, ,
        AC_MSG_ERROR([*** IMLIB 1.8 not installed - please install first ***]))

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for endianness (needed by GdkRgb).
AC_C_BIGENDIAN

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_MMAP

AC_OUTPUT([
gtk-engines.spec
Makefile
pixmap/Makefile
pixmap/Theme/Makefile
pixmap/Theme/gtk/Makefile
metal/Makefile
metal/Theme/Makefile
metal/Theme/gtk/Makefile
notif/Makefile
notif/Theme/Makefile
notif/Theme/gtk/Makefile
redmond95/Makefile
redmond95/Theme/Makefile
redmond95/Theme/gtk/Makefile
])
