# Process this file with autoconf to produce a configure script.
# replace these 2 "pixmap" prefixes with whatever you're theme is
AC_INIT(pixmap_theme_draw.c)
THEME="pixmap"

# Save this value here, since automake will set cflags later

# For automake.
VERSION=0.1.0
PACKAGE=gtk-${THEME}-theme

# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PATH_GTK(1.1.0, , 
	AC_MSG_ERROR([*** GTK 1.1 not installed - please install first ***]))
AM_PATH_GDK_IMLIB(1.8, ,
        AC_MSG_ERROR([*** IMLIB 1.8 not installed - please install first ***]))
# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for endianness (needed by GdkRgb).
AC_C_BIGENDIAN

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_MMAP

AC_OUTPUT([
Makefile
Theme/Makefile
Theme/gtk/Makefile
])
