AC_INIT(README)

AM_INIT_AUTOMAKE(raleigh, 0.2)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL

dnl Initialize libtool
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Checks for programs.
AM_PATH_GTK(1.2.0, , 
	AC_MSG_ERROR([*** GTK 1.2 not installed - please install first ***]))

AC_CHECK_LIB(gtk, gtk_style_set_prop_experimental, ,
	     AC_MSG_ERROR([*** Property setting patch not found ***]),
             $GTK_LIBS)

dnl Checks for header files.
AC_HEADER_STDC

AC_OUTPUT([
Makefile
Theme/Makefile
Theme/gtk/Makefile
])
