themedir = $(datadir)/themes/GNOME3/metacity-1
theme_DATA = \
	metacity-theme-1.xml \
	button_close.png \
	left_button_edge.png \
	menu_button_bg_prelight.png \
	menu_button_minimize.png \
	button_maximize.png \
	menu_button_close.png \
	button_minimize.png \
	menu_button_bg.png \
	menu_button_maximize.png

EXTRA_DIST = $(theme_DATA)


-include $(top_srcdir)/git.mk

